<resources>
    <string name="app_name">Pokémon</string>
    <string name="appTV">List</string>
    <string name="computoTV">Cómputo móvil</string>
    <string name="semestreTV">2021-1</string>

    <!--Strings de Urls -->
    <string name="url_pokemons">https://pokeapi.co/api/v2/</string>
    <string name="slash">/</string>


    <!-- Strings de errores en conexión -->
    <string name="errorResponseTag">Pokedex</string>
    <string name="errorMsgResponse">"onResponse: "</string>
    <string name="errorFailureTag">Pokedex</string>
    <string name="errorMsgFailure">"onFailure: "</string>

    <string name="hashtag">"# "</string>

    <string name="base_xp">Base experience:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="types">Types:</string>

    <string name="errorNoInternet">"Connection couldn't be established. Please check your internet connection and relaunch the app." </string>
    <string name="errorNoCharacteristics">Error loading the pokémon characteristics. Please check your internet connection and relaunch the app.</string>
</resources>